--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+<meta name="google-adsense-account" content="ca-pub-8052415161271246">
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>DiamondTop 💎 — Free Fire Top-up (MVP)</title>
@@ -795,3 +796,4 @@
 </script>
 </body>
 </html>
+
