--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta name="google-adsense-account" content="ca-pub-8052415161271246">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8052415161271246"
+     crossorigin="anonymous"></script>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>DiamondTop 💎 — Free Fire Top-up (MVP)</title>
@@ -796,4 +797,5 @@
 </script>
 </body>
 </html>
+
 
