--- a/index.html
+++ b/index.html
@@ -376,6 +376,18 @@
 </style>
 </head>
 <body>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8052415161271246"
+     crossorigin="anonymous"></script>
+<!-- before ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8052415161271246"
+     data-ad-slot="6254145360"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <header>
   <div class="logo">DiamondTop 💎</div>
@@ -797,5 +809,6 @@
 </script>
 </body>
 </html>
+
 
 
